Try a fix with inherit font size for suggestions on mobile devices :

--- a/index.css
+++ b/index.css
@@ -158,3 +158,7 @@ table {
   margin: 0 5px;
   padding: 0;
 }
+
+input {
+  font-size: inherit;
+}
